@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Fri Dec  8 01:20:34 UTC 2000
+sms:
++ added dirlist option to keyword filelist
+
+----- cvs ci ------
 Thu Dec  7 22:21:25 UTC 2000
 sms:
 + added keyword filelist
